# discord2feishu

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/: README.md  ecosystem.config.js  supervisor.conf  systemd.service
discord2feishu/: bot.py  config.py  feishu_client.py  main.py  message_formatter.py
